components/quote/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    font-family: Roboto, sans-serif;
    padding: 0;
    margin: 0;
}

.quote-container {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    padding: 100px 0;
    margin: 0 auto;
}

.quote-text {
    font-size: 36px;
    font-weight: 100;
    font-style: italic;
    color: #1F2937;
}

.quote-author {
    display: flex;
    justify-content: flex-end;
    font-weight: 900;
    font-size: 28px;
}

.quote-text,
.quote-author {
    width: 880px;
    margin: 0 auto;
}

